parser/src/ast/snapshots/liquid_doc_parser__ast__text_node__tests__fallback_node.snap
---
source: parser/src/ast/text_node.rs
expression: "@unsupported this node falls back to a text node"
---
[
  {
    "type": "TextNode",
    "value": "@unsupported this node falls back to a text node",
    "position": {
      "start": 10,
      "end": 58
    },
    "source": "@unsupported this node falls back to a text node"
  }
]
