parser/src/ast/snapshots/liquid_doc_parser__ast__text_node__tests__multiline_with_prompt_tag.snap
---
source: parser/src/ast/text_node.rs
expression: "@prompt\nThis is a prompt\nIt can have multiple lines"
---
[
  {
    "type": "TextNode",
    "value": "@prompt\nThis is a prompt\nIt can have multiple lines",
    "position": {
      "start": 10,
      "end": 61
    },
    "source": "@prompt\nThis is a prompt\nIt can have multiple lines"
  }
]
