parser/src/ast/snapshots/liquid_doc_parser__ast__text_node__tests__prompt_node.snap
---
source: parser/src/ast/text_node.rs
expression: "@prompt Make something pretty"
---
[
  {
    "type": "TextNode",
    "value": "@prompt Make something pretty",
    "position": {
      "start": 10,
      "end": 39
    },
    "source": "@prompt Make something pretty"
  }
]
